--- a/startpage.html
+++ b/startpage.html
@@ -6,17 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
     <title>Zombie Hunterz Gamerz</title>
 </head>
 
-<body class="startpage">
+<body style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 100px;"class="startpage">
             <h1 class="title">Zombie Hunterz Gamerz</h1>
             <div class="boxter">
                 <div class="buttons text-center">
-                    <button type="button" onclick="easy()" class="btn btn-success btn-lg btn-block btn-huge">Very Ezi</button>
-                    <button type="button" onclick="medium()" class="btn btn-success btn-lg btn-block btn-huge">Kinda Hardz</button>
-                    <button type="button" onclick="hard()" class="btn btn-success btn-lg btn-block btn-huge">Very Difficultz</button>
+                    <button type="button" onclick="easy()" class="btn btn-success btn-lg btn-huge">Very Ezi</button>
+                </div>
+                <div class="buttons text-center">
+                    <button type="button" onclick="medium()" class="btn btn-success btn-lg btn-huge">Kinda Hardz</button>
+                </div>
+                <div class="buttons text-center">
+                    <button type="button" onclick="hard()" class="btn btn-success btn-lg btn-huge">Very Difficultz</button>
                 </div>
             </div>
 
