--- a/main.html
+++ b/main.html
@@ -6,15 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.png" type="image/gif" sizes="16x16">
     <title>ZOMBIE GAME</title>
 </head>
 
-<body class="doinkster">
+<body style="background-image: url('Images/zombie_game_background.jpg'); background-size: cover;" class="gameover">
     <div class="text-center fixed-bottom text-white">
         <h1>Press 'spacebar' to go back</h1>
-
     </div>
 </body>
 
