--- a/startpage.html
+++ b/startpage.html
@@ -9,17 +9,17 @@
     <title>Zombie Hunterz Gamerz</title>
 </head>
 
-<body style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 100px;"class="startpage">
-            <h1 class="title">Zombie Hunterz Gamerz</h1>
-            <div class="boxter">
-                <div class="buttons text-center">
-                    <button type="button" onclick="easy()" class="btn btn-success btn-lg btn-huge">Very Ezi</button>
+<body style="background-image: url('Images/zombiegame_start_screen_background_image.jpg'); background-size: cover;" class="gameover">
+            <h1 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 100px; text-align: center;" class="mt-5">Zombie Hunterz Gamerz</h1>
+            <div style="margin-top: 100px;">
+                <div class="buttons text-center mb-1">
+                    <button type="button" onclick="easy()" style="width: 300px;" class="btn btn-success btn-lg btn-huge">Very Ezi</button>
+                </div>
+                <div class="buttons text-center mb-1">
+                    <button type="button" onclick="medium()" style="width: 300px;" class="btn btn-success btn-lg btn-huge">Kinda Hardz</button>
                 </div>
                 <div class="buttons text-center">
-                    <button type="button" onclick="medium()" class="btn btn-success btn-lg btn-huge">Kinda Hardz</button>
-                </div>
-                <div class="buttons text-center">
-                    <button type="button" onclick="hard()" class="btn btn-success btn-lg btn-huge">Very Difficultz</button>
+                    <button type="button" onclick="hard()" style="width: 300px;" class="btn btn-success btn-lg btn-huge">Very Difficultz</button>
                 </div>
             </div>
 
