--- a/gameover.html
+++ b/gameover.html
@@ -16,7 +16,7 @@
                 GAME OVER
             </h1>
             <div class="buttons text-center">
-                <button type="button" onclick="back()" class="btn btn-success btn-lg">Main Menu</button>
+                <button type="button" onclick="back()" class="btn btn-success btn-lg">Main Menu</button><!--kör back funtionen på onclick-->
             </div>
         </div>
 
@@ -25,6 +25,6 @@
 </html>
 <script>
     function back() {
-        location.replace('startpage.html')
+        location.replace('startpage.html')///ändrar sida till startpage
     }
 </script>
