--- a/startpage.html
+++ b/startpage.html
@@ -12,7 +12,7 @@
 <body style="background-image: url('Images/zombiegame_start_screen_background_image.jpg'); background-size: cover;" class="gameover">
             <h1 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 100px; text-align: center;" class="mt-5">Zombie Hunterz Gamerz</h1>
             <div style="margin-top: 100px;">
-                <div class="buttons text-center mb-1">
+                <div class="buttons text-center mb-1"><!--här finns alla olika buttons för olika gamemodes, onclick kör funktionerna som sparar vilket gamemode dom ville ha och ändrar antal och hastighet på zombies-->
                     <button type="button" onclick="easy()" style="width: 300px;" class="btn btn-success btn-lg btn-huge">Very Ezi</button>
                 </div>
                 <div class="buttons text-center mb-1">
@@ -25,7 +25,7 @@
 
 </body>
 <script>
-    function easy() {
+    function easy() {///i dessa funktioner så sätter jag localstorage till motsvarande gamemode dom klickar på
         localStorage.setItem("gamemode", "easy");
         location.replace('main.html')
     }
